Add favicon to index.html
Added favicon link to the head section.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Double M Accessories - Premium Men's Accessories</title>
+    <link rel="icon" href="assets/logo.jpg" type="image/jpeg">
     <meta name="description" content="Shop premium men's rings, bracelets, and wallets at Double M Accessories">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -222,3 +223,4 @@
     <script src="js/main.js"></script>
 </body>
 </html>
+
